# plentra-platform

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  plentra-platform-mockup.jsx  render.yaml  tailwind.config.js  vite.config.js
backend/: Cargo.toml  Dockerfile  railway.toml
backend/migrations/: 0001_create_hypertables.sql  0002_continuous_aggregates.sql  0003_indexes.sql  0004_api_cache.sql  0005_fuel_ohlcv.sql  0006_price_hourly_pse.sql
backend/src/: cache.rs  config.rs  main.rs
backend/src/analytics/: changepoint.rs  css.rs  decomposition.rs  forecast.rs  mod.rs  signal_aggregator.rs
backend/src/db/: mod.rs  models.rs  pool.rs  reader.rs  writer.rs
backend/src/fetchers/: databento.rs  entsoe.rs  mod.rs  pse.rs  stooq.rs
backend/src/models/: europe.rs  fuel.rs  generation.rs  mod.rs  price.rs  residual.rs  spread.rs
backend/src/routes/: admin.rs  analytics.rs  crossborder.rs  curtailment.rs  europe.rs  forecast.rs  fuels.rs  generation.rs  health.rs  history.rs  mod.rs  prices.rs  reserves.rs  residual.rs  spreads.rs  summary.rs
backend/src/services/: mod.rs  retrospective.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/crossborder/: page.tsx
frontend/src/app/europe/: page.tsx
frontend/src/app/forecast/: page.tsx
frontend/src/app/generation/: page.tsx
frontend/src/app/reserves/: page.tsx
frontend/src/app/stability/: page.tsx
frontend/src/app/summary/: page.tsx
frontend/src/components/analytics/: AnalyticsCharts.tsx  ChangepointChart.tsx  (+4 more)
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts  react-simple-maps.d.ts
src/: index.css  main.jsx
(+35 files in other folders)
