[package]
name = "plentra-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-cron-scheduler = "0.10"
csv = "1"
dotenvy = "0.15"
quick-xml = { version = "0.37", features = ["serialize"] }
futures = "0.3"
urlencoding = "2.1"
chrono-tz = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
augurs = { version = "0.10", features = ["mstl", "ets", "changepoint", "dtw"] }
